      * Add new mcpl_set_print_handler function in the C API which can be used
        to handle printouts from the MCPL library in a different manner than
        simply putting them onto stdout via a call to printf. One use-case for
        this would be for Python which wants to load the MCPL library and ensure
        that all printouts are directed into the Python stdout streams.
      * ...

v2.0.0 2024-04-24
      * After more than 200 commits affecting almost 300 files, this milestone
        release brings new supported user platforms, new packaging and
        deployment, and a huge restructuring of the environment in which MCPL is
        developed and tested.
      * One highly visible feature is that MCPL wheels on PyPI now provide
        full-fledged installations with all features previously only available
        via Conda or custom builds. Thus, `pip install mcpl` is now an
        alternative to `conda install -c conda-forge mcpl` for getting all the
        features.
      * Another, and perhaps the biggest, user-visible feature is that MCPL now
        also supports usage on Windows! This support is NOT considered
        experimental, and Windows users can now install the `mcpl` package via
        tools like `pip` and `conda` and expect the same features on both the
        command-line and in the Python and C APIs as Unix users have had in the
        past. Of course, there might be bugs or issues to iron out, so please
        help us test out the new release on Windows and file issues at
        https://github.com/mctools/mcpl/issues as appropriate!
      * The website at https://mctools.github.io/mcpl/ has been fully updated
        for the new release. Also note, that we have enabled the discussion
        forum at https://github.com/mctools/mcpl/discussions, so feel free to
        use it for questions or sharing anything with the MCPL community.
      * Another, less exciting but still note-worthy, change is that MCPL code